--- a/comida/static/reservas.css
+++ b/comida/static/reservas.css
@@ -1,4 +1,20 @@
 
+
+.main::before {
+    content: '';
+    background-image: url('/static/img/cok_4.jpg');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+}
 .reservas-section {
     padding-top: 20px;
 }
