--- a/comida/templates/base.html
+++ b/comida/templates/base.html
@@ -21,9 +21,9 @@
         </div>
         <nav class="menu">
             {% if not user.is_authenticated %}
-            <a href="{% url 'home' %}">Inicio</a>
-            {% endif %}
             
+            {% endif %}
+            <a href="{% url 'home' %}">Inicio</a>
             <a href="{% url 'nosotros' %}">Nosotros</a>
             <a href="{% url 'servicios' %}">Servicios</a>
             <a href="{% url 'contactenos' %}">Contactenos</a>
@@ -35,8 +35,10 @@
 
         <div class="menu-icons">
             {% if user.is_authenticated %}
-                <a href="{% url 'carrito' %}" title="Carrito">
+            
+                <a class="carrito-icon " href="{% url 'carrito' %}" title="Carrito">
                     <i class='bx bx-cart'></i>
+                    <span id="cart-counter" class="hidden">0</span>
                 </a>
                 <div class="profile-menu">
                     <button id="profileBtn" class="profile-btn">
@@ -101,6 +103,8 @@
         </div>
    </footer>
     <script src="{% static 'js/script.js' %}"></script>
+    <script src="{% static 'js/carrito.js' %}"></script>
+    <script src="{% static 'js/contraseña.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="{% static 'js/reservas.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
