--- a/comida/templates/contactenos.html
+++ b/comida/templates/contactenos.html
@@ -20,16 +20,13 @@
             <form method="POST" action="{% url 'contactenos' %}">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="nombre">Nombre y Apellido</label>
-                    <input type="text" id="nombre" name="nombre" required>
+                    <input type="text" placeholder="Nombre Completo" id="nombre" name="nombre" required>
                 </div>
                 <div class="form-group">
-                    <label for="correo">Correo</label>
-                    <input type="email" id="correo" name="correo" required>
+                    <input type="email" placeholder="Correo" id="correo" name="correo" required>
                 </div>
                 <div class="form-group">
-                    <label for="telefono">Teléfono</label>
-                    <input type="tel" id="telefono" name="telefono" required>
+                    <input type="tel" placeholder="Telefono" id="telefono" name="telefono" required>
                 </div>
                 <div class="form-group">
                     <label for="mensaje">Mensaje</label>
