--- a/comida/templates/pagina.html
+++ b/comida/templates/pagina.html
@@ -6,11 +6,13 @@
 <link rel="stylesheet" href="{% static 'pagina.css' %}">
 <header class="hero">
     <div class="hero-content">
-        <h1><span class="resaltado">¡Bienvenidos a </span> Chok Dog!</h1>
+        
+        <h1><span class="resaltado"> ¡Hola {{ user.first_name}} {{ user.last_name }},<br> Bienvenido a </span> Chok Dog!</h1>
         <h2>🌟 Descubre la magia de nuestros sabores 🌟</h2>
         <p>Ven por una experiencia culinaria diseñada para deleitar tus sentidos. Cada plato es preparado con los ingredientes más frescos y con un toque especial que te hará regresar por más.
         </p>
     </div>
+    
     <div class="hero-img">
         <img src="{% static 'img/cok_2.jpg' %}" alt="Plato de comida">
     </div>
