--- a/comida/static/login.css
+++ b/comida/static/login.css
@@ -26,7 +26,7 @@
 }
 
 .login-cont {
-    background-color: var(--blanco);
+    background-color: rgba(255, 255, 255, 0.812);
     padding: 20px;
     border-radius: 8px;
     box-shadow:  var(--box);
@@ -35,10 +35,18 @@
     margin: 10px auto;
 }
 
-.login-cont p {
-    text-align: center;
-}
 
+.enl{
+    text-align: center;
+    font-weight: bold;
+    margin-top: 20px;
+    
+}
+.enl a{
+    color: var(--negro-profundo);
+    text-decoration: none;
+   
+}
 label {
     display: block;
     margin-bottom: 8px;
