--- a/comida/static/productos.css
+++ b/comida/static/productos.css
@@ -2,39 +2,46 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--negro-profundo);
+    color: white;
+    
 }
 .menu-con {
     text-align: center;
     padding: 20px;
     margin-bottom: 40px;
-    max-width: 1200px;
+    
+    width: 90%;
+   
    
 
 }
 
 .food-item {
+    text-align: center;
+    border-radius: 20px;
+    margin: 20px;
+    box-shadow: 3px 3px 10px;
     display: inline-block;
     align-items: center;
-    
-    padding: 15px;
-    border-radius: 10px;
-    margin: 15px;
     color: rgb(0, 0, 0);
-    width: 250px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    border: solid 2px var(--dorado);
+    width: 20%;
+    background-color: #ffffff;
+    
+    
 }
 
 .food-item img {
-    width: 95%;
-    height: 160px;
-    border: solid 2px var(--dorado);
+    width: 100%;
+    height: 250px;
+    border-radius: 20px  20px 0 0 ;
     margin-bottom: 10px;
+    padding: 10px;
     
 }
 .details{
     padding: 10px;
-    border: solid 2px var(--dorado);
+    
     margin-bottom: 10px;
     text-align: start;
 }
