--- a/comida/static/servicios.css
+++ b/comida/static/servicios.css
@@ -4,7 +4,7 @@
     background-color: var(--negro-profundo);
     color: #fff;
     padding: 4rem 2rem;
-    min-height: 450px;
+    min-height: 70vh;
 }
 
 .services-container {
