--- a/comida/templates/base.html
+++ b/comida/templates/base.html
@@ -77,7 +77,7 @@
                 <div class="footer-col">
                     <h4>Horarios</h4>
                     <ul>
-                        <li><a href="#">Lunes a sábado: <br> 12:00-23:00</a></li>
+                        <li><a href="#">Lunes a sábado: <br> 6:00 pm - 11:00 pm</a></li>
                         
                         
                     </ul>
@@ -85,7 +85,7 @@
                 <div class="footer-col">
                     <h4>Propietario</h4>
                     <ul>
-                        <li><a href="#">Andrea Julieth Villaquira Escobar</a></li>
+                        <li><a href="#">Andrea Julieth Villaquira Escovar</a></li>
                         <li><a href="#">Arley Ríos Rivera</a></li>
                         
                     </ul>
@@ -104,7 +104,7 @@
    </footer>
     <script src="{% static 'js/script.js' %}"></script>
     <script src="{% static 'js/carrito.js' %}"></script>
-    <script src="{% static 'js/contraseña.js' %}"></script>
+    <script src="{% static 'js/alerts.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="{% static 'js/reservas.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -114,7 +114,11 @@
                 Swal.fire({
                     title: "Felicitaciones",
                     text: "{{ m }}",
-                    icon: "success"
+                    icon: "success",
+                    confirmButtonText: "OK",
+                    customClass: {
+                        confirmButton: "btn-custom"
+                    }
                 })
             </script>
         {% endfor %}
