--- a/comida/templates/email_contrasena.html
+++ b/comida/templates/email_contrasena.html
@@ -1,12 +1,8 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
-</head>
-<body>
+
+{% block content %}
+<link rel="stylesheet" href="{% static 'contraseña.css' %}">
 
 <div class="section">
     <div class="container">
@@ -19,17 +15,16 @@
             <form method="POST">
                 {% csrf_token %}
                 <div class="input-box">
-                    <input type="password" class="input-field" id="log-email" name="password" required>
-                    <label for="log-email" class="label">Nueva contraseña:</label>
-                    <i class='bx bx-envelope icon'></i>
+                    <i class='bx bx-lock-alt'></i>
+                    <input type="password" placeholder="Nueva contraseña" class="input-field" id="log-email" name="password" required>
+                    
                 </div>
-                <div class="input-box">
-                    <button type="submit" class="btn-submit" id="SignInBtn">Guardar<i
-                            class='bx bx-log-in'></i></button>
+                <div class="env">
+                    <button type="submit" class="btn-submit" id="SignInBtn">Guardar</button>
                 </div>
             </form>
         </div>
     </div>
 </div>
-</body>
-</html>
+
+{% endblock %}
