--- a/comida/templates/email_restablecer.html
+++ b/comida/templates/email_restablecer.html
@@ -28,7 +28,7 @@
                 {% csrf_token %}
                 <div class="input-box">
                     <i class='bx bx-envelope icon'></i>
-                    <input type="email" placeholder="Correo Registrado" class="input-field" id="log-email" name="email" required>
+                    <input type="email" placeholder="Correo Registrado" class="input-field" id="password" name="email" required>
                     
                 </div>
                 <div class="env">
