--- a/comida/static/carrito.css
+++ b/comida/static/carrito.css
@@ -22,7 +22,11 @@
     text-align: center;
   }
   
-  button {
+  .eliminar-item{
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 5px 10px;
     background: #d4af37;
     color: #222;
@@ -31,10 +35,26 @@
     border-radius: 4px;
     transition: background 0.3s;
   }
+  .eliminar-item i{
+    font-size: 25px;
+    text-decoration: none;
+    color: #222;
+    
+  }
+
   
-  button:hover {
+  .eliminar-item:hover  {
     background: #b8952d;
   }
+  .bot{
+    background-color: var(--dorado);
+    padding: 15px;
+    border-radius: 20px;
+    text-decoration: none;
+    color: black;
+  }
+  
+  
   
   #total {
     font-size: 20px;
