--- a/comida/static/productos.css
+++ b/comida/static/productos.css
@@ -172,62 +172,35 @@
     
 }
 
-/* .menu-con {
-    text-align: center;
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 10% auto;
     padding: 20px;
-    margin-bottom: 50px;
-}
-
-h1 {
-    color: #333;
-}
-
-.food-item {
-    display: inline-block;
-    width: 200px;
-    margin: 15px;
-    background-color: white;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     border-radius: 10px;
-    border: solid 2px var(--dorado);
-    padding: 10px;
+    width: 50%;
+    text-align: center;
 }
 
-.food-item img {
-    width: 79%;
-    height: 100px;
-    padding: 20px;
-    border: solid 2px var(--dorado);
-    margin-bottom: 10px;
-    
-}
-
-.details {
-    padding: 10px;
-    border: solid 2px var(--dorado);
-    margin-bottom: 10px;
-    text-align: start;
-}
-
-.details p {
-    margin: 5px 0;
-    color: #666;
-}
-
-.boton button{
-    background-color: #545454;
-    color: white;
-    border: solid 1px var(--dorado);
-    padding: 10px;
-    border-radius: 25px;
-    
-
-}
-.boton button:hover{
-    transition: all .2s ;
-    background-color: var(--dorado);
+.close {
+    color: #333;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
     cursor: pointer;
-} */
+}
+
 
 @media (max-width: 768px) {
     .menu-con {
