--- a/comida/templates/email_contrasena.html
+++ b/comida/templates/email_contrasena.html
@@ -16,8 +16,8 @@
                 {% csrf_token %}
                 <div class="input-box">
                     <i class='bx bx-lock-alt'></i>
-                    <input type="password" placeholder="Nueva contraseña" class="input-field" id="log-email" name="password" required>
-                    
+                    <input type="password" placeholder="Nueva contraseña" class="input-field" id="password" name="password" required>
+                    <i id="togglePassword" class="fa fa-eye" onclick="togglePassword()"></i>
                 </div>
                 <div class="env">
                     <button type="submit" class="btn-submit" id="SignInBtn">Guardar</button>
@@ -26,5 +26,34 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    window.onload = function() {
+            var passwordField = document.getElementById('password');
+            var toggleIcon = document.getElementById('togglePassword');
+            
+            // Asegurarse de que el campo de la contraseña esté oculto por defecto
+            passwordField.type = 'password';  // La contraseña está oculta por defecto
+            toggleIcon.classList.add('fa-eye-slash');  // Añadir el ícono con la raya
+        }
+    function togglePassword() {
+        var passwordField = document.getElementById('password');
+        var passwordType = passwordField.type;
+        var toggleIcon = document.getElementById('togglePassword');
+
+        // Cambiar entre 'password' y 'text'
+        if (passwordType === 'password') {
+            passwordField.type = 'text';  // Mostrar la contraseña
+            toggleIcon.classList.remove('fa-eye-slash');
+            toggleIcon.classList.add('fa-eye');  // Cambiar ícono
+        } else {
+            passwordField.type = 'password';  // Ocultar la contraseña
+            toggleIcon.classList.remove('fa-eye');
+            toggleIcon.classList.add('fa-eye-slash');  // Cambiar ícono
+        }
+    }
+</script>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 {% endblock %}
