--- a/comida/templates/pagina.html
+++ b/comida/templates/pagina.html
@@ -32,9 +32,9 @@
             <p>Una combinación perfecta de sabores.</p>
         </div>
         <div class="menu-item">
-            <img src="{% static 'img/pla4.jpg' %}" alt="Pizza">
+            <img src="{% static 'img/pla4.jpg' %}" alt="crema">
             <h3>Crema Batida</h3>
-            <p>Ingredientes premium y masa crujiente.</p>
+            <p>Ingredientes premium y sabores deliciosos.</p>
         </div>
         <div class="menu-item">
             <img src="{% static 'img/pla2.jpg' %}" alt="Batido">
