--- a/comida/templates/pago.html
+++ b/comida/templates/pago.html
@@ -48,10 +48,11 @@
                     <img class="neq" id="qr-nequi" src="{% static 'img/mision.jpg' %}" alt="QR Nequi" style="display: none;">
                     <img class="dav" id="qr-daviplata" src="{% static 'img/c_2.jpg' %}" alt="QR Daviplata" style="display: none;">
                 </div>
+                <h4>👇Ingresar el comprobante de pago👇</h4>
                 <input type="file" id="comprobante" name="comprobante" accept="image/*" required>
                 
                 
-                <button type="submit">Confirmar Pedido</button>
+                <button class="pedido" type="submit">Confirmar Pedido</button>
             </form>
         </div>  
     </div>
