--- a/comida/static/pago.css
+++ b/comida/static/pago.css
@@ -112,7 +112,7 @@ input[type="radio"] {
     margin-right: 8px;
 }
 
-button {
+.pedido {
     background-color: var(--dorado);
     color: white;
     border: none;
@@ -123,7 +123,7 @@ button {
     transition: 0.3s;
 }
 
-button:hover {
+.pedido:hover {
     background-color: #a69922;
 }
 
@@ -141,27 +141,20 @@ button:hover {
     cursor: pointer;
 }
 
-/* Estilos para mejorar la vista en dispositivos pequeños */
+
 @media (max-width: 900px) {
     .pago {
         flex-direction: column;
         align-items: center;
-    }
-}
-@media (max-width: 600px) {
-    .pago {
-        width: 95%;
-        padding: 0;
-        margin: 0;
         
     }
-    .payment-container{
-        margin: 0;
-        max-width: 200px;
-        
+    .payment-container {
+        width: 90%;
+        max-width: none;
     }
 }
-/* Estilos para pantallas medianas (Tablets) */
+
+
 @media (max-width: 768px) {
     .payment-container {
         width: 95%;
@@ -169,11 +162,11 @@ button:hover {
     }
     
     .qr img {
-        width: 150px; /* Reduce el tamaño del QR en pantallas medianas */
+        width: 150px; 
     }
 }
 
-/* Estilos para pantallas pequeñas (Celulares) */
+
 @media (max-width: 480px) {
     .tit h2 {
         font-size: 24px;
@@ -202,6 +195,6 @@ button:hover {
     }
 
     .qr img {
-        width: 120px; /* Reduce más el QR en pantallas pequeñas */
+        width: 150px; /* Reduce más el QR en pantallas pequeñas */
     }
 }
