--- a/comida/static/pago.css
+++ b/comida/static/pago.css
@@ -1,6 +1,6 @@
 /* pago.css */
 main {
-    background-color: var(--blanco);
+    background-color: var(--negro-carbon);
     color: rgb(0, 0, 0);
     margin: 0;
     padding: 0;
@@ -12,6 +12,7 @@ main {
     text-align: center;
     margin: 20px;
     font-size: 30px ;
+    color: white;
 }
 .pago{
     display: flex;
@@ -22,22 +23,22 @@ main {
 
 
 .payment-container {
-    background: var(--blanco);
+    background: var(--negro-carbon);
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.749);
+    box-shadow: 0 2px 8px rgb(212, 175, 55);
     width: 90%;
     max-width: 500px;
     text-align: center;
+    color: var(--dorado);
 }
 
 
-h2 {
-    color: #333;
-}
+
 
 .resumen-pedido {
     margin-bottom: 20px;
+    
 }
 
 #resumen-table {
@@ -47,7 +48,7 @@ h2 {
 }
 
 #resumen-table th, #resumen-table td {
-    border: 1px solid #000000;
+    border: 1px solid var(--dorado);
     padding: 8px;
     text-align: center;
 }
@@ -56,7 +57,7 @@ h2 {
     text-align: center;
     padding: 5px;
     font-size: 20px;
-    background: var(--blanco);
+    background: var(--dorado);
     border: none;
     
 }
@@ -84,7 +85,7 @@ form {
 .qrl{
     background-color: var(--dorado);
     border-radius: 15px;
-    color: white;
+    color: var(--blanco);
 }
 
 
@@ -114,7 +115,7 @@ input[type="radio"] {
 
 .pedido {
     background-color: var(--dorado);
-    color: white;
+    color: rgb(0, 0, 0);
     border: none;
     padding: 12px;
     font-size: 1.1em;
@@ -124,7 +125,7 @@ input[type="radio"] {
 }
 
 .pedido:hover {
-    background-color: #a69922;
+    background-color: #acacac;
 }
 
 .opcion-entrega {
