--- a/comida/static/pagina.css
+++ b/comida/static/pagina.css
@@ -7,12 +7,15 @@
     position: relative;
 }
 
-.hero-content h1 {
+.hero-content h2 {
     margin: 10px;
+    color: var(--dorado);
 }
+
 .hero-content h1 {
     font-size: 3rem;
     color: var(--blanco);
+    margin: 10px;
 }
 
 .resaltado {
@@ -22,6 +25,7 @@
 .hero-content p {
     font-size: 1.2rem;
     margin: 1rem 0;
+    color: white;
 }
 
 .hero-buttons {
