--- a/comida/static/servicios.css
+++ b/comida/static/servicios.css
@@ -1,21 +1,28 @@
 .services-section {
     display: flex;
     align-items: center;
+    
     background-color: var(--negro-profundo);
     color: #fff;
     padding: 4rem 2rem;
-    min-height: 70vh;
+    min-height: 90vh;
 }
 
 .services-container {
+    
     max-width: 1200px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
+    min-height: 25em;
 }
 
 .service-card {
+    display: flex;
+    justify-content: center;
+
+    flex-direction: column;
     background-color: #2d2d2d;
     border-radius: 10px;
     padding: 2rem;
